--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./src/server.ts",
+    "start": "ts-node ./src/app.ts",
     "start:nodemon": "nodemon",
-    "start:prod": "npm run build && node ./dist/src/server.js",
-    "build": "npx tsc"
+    "start:prod": "npm run build && node ./dist/src/app.js",
+    "build": "npx tsc",
+    "db:create": "ts-node ./src/db.ts"
   },
   "repository": {
     "type": "git",
@@ -21,18 +22,26 @@
   },
   "homepage": "https://github.com/lemesh2424/node_hw2#readme",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-joi-validation": "^5.0.1",
     "joi": "^17.6.0",
-    "uuid": "^8.3.2"
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.20.1"
   },
   "devDependencies": {
+    "@types/chance": "^1.1.3",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/joi": "^17.2.3",
     "@types/node": "^17.0.35",
-    "@types/uuid": "^8.3.4",
+    "@types/pg": "^8.6.5",
+    "@types/sequelize": "^4.28.13",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
+    "chance": "^1.1.8",
+    "nodemon": "^2.0.16",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
   }
