--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "joi": "^17.6.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.20.1"
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@types/chance": "^1.1.3",
@@ -37,7 +38,6 @@
     "@types/joi": "^17.2.3",
     "@types/node": "^17.0.35",
     "@types/pg": "^8.6.5",
-    "@types/sequelize": "^4.28.13",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "chance": "^1.1.8",
