--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "outDir": "./dist",
     "rootDir": "./",
     "baseUrl": "./",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   }
 }
