--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "@types/joi": "^17.2.3",
     "@types/node": "^17.0.35",
     "@types/pg": "^8.6.5",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "chance": "^1.1.8",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.2",
+    "winston": "^3.8.1"
   }
 }
